--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "aloha/twilio": "^3.0",
+        "brozot/laravel-fcm": "^1.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
